--- a/index.html
+++ b/index.html
@@ -8,11 +8,37 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="">
-     
-    </div>
-    <div class="">
-      
+    <div class="container">
+      <div class="row">
+        <div class="calc-input"></div>
+      </div>
+      <div class="row">
+        <div class="button" data-value="7">7</div>
+        <div class="button" data-value="8">8</div>
+        <div class="button" data-value="9">9</div>
+        <div class="button" data-value="/">/</div>
+      </div>
+      <div class="row">
+        <div class="button" data-value="4">4</div>
+        <div class="button" data-value="5">5</div>
+        <div class="button" data-value="6">6</div>
+        <div class="button" data-value="*">*</div>
+      </div>
+      <div class="row">
+        <div class="button" data-value="1">1</div>
+        <div class="button" data-value="2">2</div>
+        <div class="button" data-value="3">3</div>
+        <div class="button" data-value="-">-</div>
+      </div>
+      <div class="row">
+        <div class="button" data-value="0">0</div>
+        <div class="button" data-value=".">.</div>
+        <div class="button" data-value="=">=</div>
+        <div class="button" data-value="+">+</div>
+      </div>
+      <div class="row">
+        <div class="button" data-value="clear">clear</div>
+      </div>
     </div>
 
     <script src="script.js"></script>
